# todo_def

./: db.sqlite3  pyproject.toml
setup/: settings.py  urls.py
todos/: admin.py  tests.py  urls.py
todos/migrations/: 0001_initial.py
